docs: align READMEs for v1.0 release
- Trim both READMEs to user-facing content; make zh-CN consistent with EN
- Add Release/JDK/PRs-Welcome badges (matching Test/License); pin Release to v1.0
- Drop 'production-ready' marketing phrasing from READMEs and CONTRIBUTING

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>